# jetlov

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
experiments/: analysis.py  evaluate.py  regression.py  shower.py  train.py  train_lundnet.py  train_mps.py  vicreg.py
experiments/logs/: best_ensemble.pt  best_model.pt  best_regression.pt  best_regression_quarkgluon.pt  best_regression_top.pt
experiments/outputs/: best_ensemble.pickle
experiments/wandb/: latest-run
experiments/wandb/offline-run-20230908_103653-k1xcrtnr/: run-k1xcrtnr.wandb
experiments/wandb/offline-run-20230908_103653-k1xcrtnr/files/: wandb-metadata.json
experiments/wandb/offline-run-20230908_103758-1qksystc/: run-1qksystc.wandb
experiments/wandb/offline-run-20230908_103758-1qksystc/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
src/jetlov/: EdgeConv.py  JetTree.py  LundNet.py  LundVicReg.py  ParticleNet.py  composite.py  hyp_layers.py  hyp_regnet.py  jet_dataset.py  read_data.py  read_data_old.py  regnet.py  util.py
src/jetlov.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/jetlov/data_generator/: make_dataset.py
src/jetron/: ensemble.py  gcnlayer.py  jetnet.py  test.py  util.py
src/jetron.egg-info/: PKG-INFO  SOURCES.txt
