[project]
name = "jetlov"
dynamic = ["version"]
authors = [{name = "Giorgio Cerro"}]
maintainers = [{name = "Giorgio Cerro"}]
description = "Enhancing Jet Tree Tagging through Optimal LundNet Variables"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy >=1.21",
    "scipy >=1.8.0",
    "networkx",
    "fastjet >=3.4.1.2",
    "awkward",
    "graphicle",
]


[project.urls]
repository = "https://github.com/GiorgioCerro/jetlov"


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"


[tool.ruff.lint]
ignore = ["ANN401", "ANN101", "ANN"]
select = [
  "F",
  "E",
  "I",
]
# Don't use the automatic fixing for now.
fixable = ["I"]
unfixable = ["F", "E"]

